remove email operations
